# enterprise-security-guardrail-auditor

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  prompts.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/dependencies/: __init__.py  container.py
app/api/routes/: audits.py  explanations.py  health.py  scans.py  uploads.py
app/api/schemas/: audit.py  explain.py  health.py  scan.py  upload.py
app/core/: config.py  exceptions.py  logging.py
app/domain/ai/: __init__.py  base.py  explainer.py  explanation.py  prompt_builder.py  provider.py
app/domain/models/: audit.py  finding.py  ingestion.py  rule.py
app/domain/repositories/: audit_repository.py
app/domain/rules/: aws_rules.py  base.py  engine.py
app/domain/services/: audit_service.py  ingestion_service.py
app/infrastructure/: __init__.py
app/infrastructure/ai/: risk_explainer.py
app/infrastructure/db/: base.py  session.py
app/infrastructure/parsers/: base.py  cloudformation.py  factory.py  terraform.py
app/infrastructure/scanners/: __init__.py
app/infrastructure/scanners/cloudformation/: __init__.py  scanner.py
app/infrastructure/scanners/terraform/: __init__.py  scanner.py
app/ui/: dashboard.py
app/ui/streamlit/: app.py
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  presentation.md  tagle-summary.md
tests/unit/: test_ai_explainer.py  test_health_endpoints.py  test_ingestion_endpoints.py  test_rule_engine.py
