[project]
name = "enterprise-security-guardrail-auditor"
version = "0.1.0"
description = "API-first enterprise security guardrail auditor"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn",
  "sqlalchemy",
  "pydantic>=2.0",
  "streamlit",
  "python-dotenv",
  "structlog",
  "PyYAML",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
